tests-integration/fixtures/checking/1772566020_derive_foldable_higher_kinded/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Wrap ::
  forall (t :: Type) (@f :: (t :: Type) -> Type) (@a :: (t :: Type)).
    (f :: (t :: Type) -> Type) (a :: (t :: Type)) ->
    Wrap @(t :: Type) (f :: (t :: Type) -> Type) (a :: (t :: Type))
WrapNoFoldable ::
  forall (t :: Type) (@f :: (t :: Type) -> Type) (@a :: (t :: Type)).
    (f :: (t :: Type) -> Type) (a :: (t :: Type)) ->
    WrapNoFoldable @(t :: Type) (f :: (t :: Type) -> Type) (a :: (t :: Type))

Types
Wrap :: forall (t :: Type). ((t :: Type) -> Type) -> (t :: Type) -> Type
WrapNoFoldable :: forall (t :: Type). ((t :: Type) -> Type) -> (t :: Type) -> Type

Derived
derive forall (t :: Type -> Type).
  Foldable (t :: Type -> Type) => Foldable (Wrap @Type (t :: Type -> Type))
derive forall (t :: Type -> Type). Foldable (WrapNoFoldable @Type (t :: Type -> Type))

Roles
Wrap = [Representational, Nominal]
WrapNoFoldable = [Representational, Nominal]

Diagnostics
error[NoInstanceFound]: No instance found for: Foldable (t :: Type -> Type)
  --> 9:1..9:44
  |
9 | derive instance Foldable (WrapNoFoldable f)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
